--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -11,83 +11,85 @@
 		<!--<link href="../../css/qiuzhi/qiuzhi-inviteAnswer.css" rel="stylesheet" />-->
 		<style>
 			.mui-scroll-wrapper {
-	padding-top: 44px;
-}
-.mui-bar~.mui-content .mui-fullscreen {
-	top: 44px;
-	height: auto;
-}
-
-.mui-pull-top-tips {
-	position: absolute;
-	top: -20px;
-	left: 50%;
-	margin-left: -25px;
-	width: 40px;
-	height: 40px;
-	border-radius: 100%;
-	z-index: 1;
-}
-
-.mui-bar~.mui-pull-top-tips {
-	top: 24px;
-}
-
-.mui-pull-top-wrapper {
-	width: 42px;
-	height: 42px;
-	display: block;
-	text-align: center;
-	background-color: #efeff4;
-	border: 1px solid #ddd;
-	border-radius: 25px;
-	background-clip: padding-box;
-	box-shadow: 0 4px 10px #bbb;
-	overflow: hidden;
-}
-
-.mui-pull-top-tips.mui-transitioning {
-	-webkit-transition-duration: 200ms;
-	transition-duration: 200ms;
-}
-
-.mui-pull-top-tips .mui-pull-loading {
-	/*-webkit-backface-visibility: hidden;
+				padding-top: 44px;
+			}
+			
+			.mui-bar~.mui-content .mui-fullscreen {
+				top: 44px;
+				height: auto;
+			}
+			
+			.mui-pull-top-tips {
+				position: absolute;
+				top: -20px;
+				left: 50%;
+				margin-left: -25px;
+				width: 40px;
+				height: 40px;
+				border-radius: 100%;
+				z-index: 1;
+			}
+			
+			.mui-bar~.mui-pull-top-tips {
+				top: 24px;
+			}
+			
+			.mui-pull-top-wrapper {
+				width: 42px;
+				height: 42px;
+				display: block;
+				text-align: center;
+				background-color: #efeff4;
+				border: 1px solid #ddd;
+				border-radius: 25px;
+				background-clip: padding-box;
+				box-shadow: 0 4px 10px #bbb;
+				overflow: hidden;
+			}
+			
+			.mui-pull-top-tips.mui-transitioning {
+				-webkit-transition-duration: 200ms;
+				transition-duration: 200ms;
+			}
+			
+			.mui-pull-top-tips .mui-pull-loading {
+				/*-webkit-backface-visibility: hidden;
 				-webkit-transition-duration: 400ms;
 				transition-duration: 400ms;*/
-	margin: 0;
-}
-
-.mui-pull-top-wrapper .mui-icon,
-.mui-pull-top-wrapper .mui-spinner {
-	margin-top: 7px;
-}
-
-.mui-pull-top-wrapper .mui-icon.mui-reverse {
-	/*-webkit-transform: rotate(180deg) translateZ(0);*/
-}
-
-.mui-pull-bottom-tips {
-	text-align: center;
-	background-color: #efeff4;
-	font-size: 15px;
-	line-height: 40px;
-	color: #777;
-}
-
-.mui-pull-top-canvas {
-	overflow: hidden;
-	background-color: #fafafa;
-	border-radius: 40px;
-	box-shadow: 0 4px 10px #bbb;
-	width: 40px;
-	height: 40px;
-	margin: 0 auto;
-}
-
-.mui-pull-top-canvas canvas {
-	width: 40px;
-}
+				margin: 0;
+			}
+			
+			.mui-pull-top-wrapper .mui-icon,
+			.mui-pull-top-wrapper .mui-spinner {
+				margin-top: 7px;
+			}
+			
+			.mui-pull-top-wrapper .mui-icon.mui-reverse {
+				/*-webkit-transform: rotate(180deg) translateZ(0);*/
+			}
+			
+			.mui-pull-bottom-tips {
+				text-align: center;
+				background-color: #efeff4;
+				font-size: 15px;
+				line-height: 40px;
+				color: #777;
+			}
+			
+			.mui-pull-top-canvas {
+				overflow: hidden;
+				background-color: #fafafa;
+				border-radius: 40px;
+				box-shadow: 0 4px 10px #bbb;
+				width: 40px;
+				height: 40px;
+				margin: 0 auto;
+			}
+			
+			.mui-pull-top-canvas canvas {
+				width: 40px;
+			}
+			
 			.mui-table h4,
 			.mui-table h5,
 			.mui-table .mui-h5,
@@ -170,7 +172,10 @@
 					pageIndex = 1;
 					flagRef = 0;
 					getAsksByUser(ExpertsInfo.UserId);
-					self.endPullDownToRefresh();
+					setTimeout(function() {
+						//结束下拉刷新
+						self.endPullDownToRefresh();
+					}, 1000);
 				}
 			},
 			up: {
@@ -183,7 +188,10 @@
 					} else {
 						mui.toast('没有更多了');
 					}
-					self.endPullUpToRefresh();
+					setTimeout(function() {
+						//结束下拉刷新
+						self.endPullDownToRefresh();
+					}, 1000);
 				}
 			}
 		});
@@ -227,7 +235,7 @@
 			li.id = 'li' + i;
 			li.className = 'mui-table-view-cell';
 			li.innerHTML = '<div class="mui-table"><div class="mui-table-cell mui-col-xs-12">' +
-				'<h4 class="mui-ellipsis">'+datasource[i].AskTitle +
+				'<h4 class="mui-ellipsis">' + datasource[i].AskTitle +
 				'</h4><p class="mui-h6 mui-ellipsis">' + datasource[i].AnswerNum + '回答 ' + datasource[i].AskTime + ' ' + datasource[i].FocusNum + '关注</p></div></div>'
 			list.appendChild(li);
 		}
