--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
@@ -167,7 +167,10 @@
 							flagRef = 0;
 							//24.获取某个用户的回答列表
 							getAnswersByUser(ExpertsInfo.UserId);
-							self.endPullDownToRefresh();
+							setTimeout(function() {
+								//结束下拉刷新
+								self.endPullDownToRefresh();
+							}, 1000);
 						}
 					},
 					up: {
@@ -178,10 +181,13 @@
 							if(pageIndex <= totalPageCount) {
 								//24.获取某个用户的回答列表
 								getAnswersByUser(ExpertsInfo.UserId);
+								setTimeout(function() {
+								//结束下拉刷新
+								self.endPullUpToRefresh();
+							}, 1000);
 							} else {
 								mui.toast('没有更多了');
 							}
-							self.endPullUpToRefresh();
 						}
 					}
 				});
