--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -691,6 +691,7 @@
 					var data1 = addData(i, cityCode);
 					dynamiclistitem.addItem(table, data1, id);
 				}
+				dynamiclistitem.questionContent();
 				events.fireToPageNone('index.html', 'closeWaiting');
 			}
 			//加载数据
