调整点到记事列表样式

--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
@@ -86,9 +86,10 @@
 
 			.mui-media-body {
 				margin-top: 10px;
-				margin-bottom: 5px;
+				margin-bottom: 7px;
 				color: #323232;
 				word-break: break-all;
+				font-size: 15px;
 			}
 
 			.time {
@@ -96,6 +97,9 @@
 				text-align: center;
 				border-bottom: 1px solid #e1e1e1;
 				color: #909090;
+				font-size: 15px;
+				padding-top: 4px;
+				padding-bottom: 4px;
 			}
 
 			.record-imge {
