--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -1040,6 +1040,8 @@
 									tempDatasource.push(datasource[i]);
 								}
 							}
+							var gids = arrayToStr(tempArr);
+							getAllClassMember(gids);
 							datasource = tempDatasource;
 							//生成班级界面
 							mui.each(datasource, function(index, element) {
@@ -1062,12 +1064,15 @@
 					});
 				}
 			});
-			// 通过群ID获取群的正常用户
-			function getBottomList() {
+
+			function getAllClassMember(gids) {
+				var gidStr = gids.replace('[', '');
+				gidStr = gidStr.replace(']', '');
+
 				//需要参数
 				var comData = {
 					top: '-1', //选择条数
-					vvl: gid, //群ID，查询的值
+					vvl: gidStr, //群ID，查询的值
 					vvl1: '-1', //群员类型，0家长,1管理员,2老师,3学生,-1取全部
 
 				};
@@ -1075,56 +1080,50 @@
 				// 通过群ID获取群的正常用户
 				postDataPro_PostGusers(comData, wd, function(data) {
 					wd.close();
+					var userArrays = [];
 					console.log('通过群ID获取群的正常用户_PostGusers:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 					if(data.RspCode == 0) {
-						datasource = data.RspData;
-						//			群用户去重
-						var tempUtidArr = [];
-						var tempUserArr = [];
-						var groupUserList = datasource;
+						var gids = gidStr.split(',');
 
-						for(var i = 0; i < groupUserList.length; i++) {
-
-							if(groupUserList[i].mstype == 0) { //0家长,1管理员,2老师,3学生
-								groupUserList[i].mstypeName = '[家长]';
-							} else if(groupUserList[i].mstype == 1) {
-								groupUserList[i].mstypeName = '[管理员]';
-							} else if(groupUserList[i].mstype == 2) {
-								groupUserList[i].mstypeName = '[老师]';
-							} else {
-								groupUserList[i].mstypeName = '[学生]';
+						for(var i = 0; i < gids.length; i++) {
+							var tempUserArr = [];
+							var gid = gids[i];
+							var tempGids = data.RspData;
+							for(var j = 0; j < tempGids.length; j++) {
+								var tempGid = tempGids[j]
+								if(tempGid.gid == gid) {
+									tempUserArr.push(tempGid.utid);
+								}
 							}
-
-							var Arrindex = tempUtidArr.indexOf(groupUserList[i].utid);
-							if(Arrindex > -1) {
-								tempUserArr[Arrindex].ugname = tempUserArr[Arrindex].ugname + groupUserList[i].mstypeName;
-							} else {
-								groupUserList[i].ugname = groupUserList[i].ugname + groupUserList[i].mstypeName;
-								tempUtidArr.push(groupUserList[i].utid);
-								tempUserArr.push(groupUserList[i]);
-
-							}
+							var tempUsersStr = arrayToStr(tempUserArr)
+							userArrays.push(tempUsersStr);
 						}
-						datasource = tempUserArr;
-						var userIds = [];
-						for(var i = 0; i < datasource.length; i++) {
-							//群用户id数组
-							tempModel = datasource[i];
-							//判断img是否为null，或者空
-							tempModel.uimg = updateHeadImg(tempModel.uimg, 2);
-							userIds.push(tempModel.utid)
-							userIds.join(',');
-
-						}
-						userIds = arrayDupRemoval(userIds)
-						upString = arrayToStr(userIds)
-						setUserSpaceReadByUser(upString);
-						getAllUserSpacesByUser(upString); //获取多用户空间列表
+						var usersStr = arrayToStr(userArrays);
+						console.log('所用的群用户：' + usersStr);
+						getNoReadCntForClassByUser(usersStr);
 
 					} else {
-						mui.toast(data.RspTxt);
+
 					}
 				});
+
+			}
+
+			function getNoReadCntForClassByUser(publisherIds) {
+				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+				//79.（用户空间）获取多班级多用户空间所有用户未读数
+				//所需参数
+				var comData = {
+					userId: personalUTID, //用户ID，登录用户
+					publisherIds: publisherIds //发布者ID，Array，例如[[1,2,3],[4,5,6]]
+				};
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				//返回：NoReadCnts：未读总数列表，Array，例如[1,2,3]
+				postDataPro_getNoReadCntForClassByUser(comData, wd, function(data) {
+					wd.close();
+					console.log('获取所有群的未读数_getNoReadCntForClassByUser:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+
+				})
 			}
 		</script>
 	</body>
