--- a/JiaoBaoYun-hb/html/quan/leaveNew.html
+++ b/JiaoBaoYun-hb/html/quan/leaveNew.html
@@ -375,7 +375,7 @@
 							'<div class="mui-media-body mui-pull-right">' +
 							'<img class=" dynamic-personal-image" src="' + datasource.uimg + '">' +
 							'</div>' +
-							'<div class="mui-media-body dynamic-padding-left-10px">' +
+							'<div class="mui-media-body dynamic-padding-left-10px"  style = "text-align: right;padding-right:10px">' +
 							'<h6>' + events.shortForString(datasource.unick, 12) + '</h6>' +
 							'</div></div>' +
 							'<div style= "margin-top:-10px"  class = "chat_content_right">' +
