--- a/JiaoBaoYun-hb/html/cloud/record_student_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_sub.html
@@ -175,7 +175,7 @@
 						//档案总条数
 						totalCnt = data.RspData.TotalCnt;
 						mui.each(tempRspData, function(index, item) {
-							console.log('tempRspData:' + JSON.stringify(item));
+							//console.log('tempRspData:' + JSON.stringify(item));
 							createNotes(item)
 						});
 					} else {
