--- a/JiaoBaoYun-hb/html/cloud/record_student_add.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_add.html
@@ -97,7 +97,7 @@
 			<h1 id="commit" class="mui-title" style="text-align: right;right: 10px;">发布</h1>
 		</header>
 		<div class="mui-content">
-			<ul class="mui-table-view" id="ul_table"style="margin-top: 0px;">
+			<ul class="mui-table-view" id="ul_table" style="margin-top: 0px;">
 				<div style="width: 100%;">
 					<!--<div class="mui-row">-->
 					<!--<div class="mui-col-sm-4 mui-col-xs-4" style="padding-left: 5%;line-height: 36px;">
@@ -119,7 +119,7 @@
 						</div>
 					</div>-->
 					<div id="record">
-						<textarea id="textarea_record" rows="6" placeholder="记事：" oninput="if(value.length>500)value=value.slice(0,500)"style="border: none;border-bottom: 1px solid #D9D9D9;"></textarea>
+						<textarea id="textarea_record" rows="6" placeholder="记事：" oninput="if(value.length>500)value=value.slice(0,500)" style="border: none;border-bottom: 1px solid #D9D9D9;"></textarea>
 						<div id="MultiMedia">
 						</div>
 					</div>
@@ -135,7 +135,13 @@
 				console.log('从父页面获取的数据:' + JSON.stringify(subData));
 				document.getElementById("title").innerText = subData.data.StudentName;
 				//---从父页面获取数据---end---
-				MultiMedia.addElement(document.getElementById("MultiMedia"));
+				multiMedia = MultiMedia.multiMedia({
+					MultiMediaId: 'MultiMedia', //存放多媒体对象控件的id
+					Picture: true, //是否显示图片图标
+					Audio: true, //是否显示音频图标
+					TotalPicture: 9, //图片的个数
+					TotalAudio: 1, //音频的个数
+				});
 
 				document.getElementById('commit').addEventListener('tap', function() {
 					var msgContent = document.getElementById("textarea_record").value;
