--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -41,7 +41,7 @@
 					<div id="question-content" class="question-content"></div>
 					<div id="answer-imgs" class="answer-imgs"></div>
 					<div class="">
-						<p id="answer-time" class="display-inlineBlock answer-time">5小时前</p>
+						<p id="answer-time" class="display-inlineBlock answer-time"><span id="answer-zanNo" class="zan-num">100</span>赞·5小时前</p>
 						<p id="support-answer" class="support-container display-inlineBlock mui-pull-right"><span id="answer-zan" class="mui-icon iconfont icon-support"></span> </p>
 					</div>
 				</div>
