求知提问界面

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -52,9 +52,7 @@
 				<div id="get_gallery" class="get_gallery">
 					<a class="mui-icon iconfont icon-tuku"></a>
 				</div>
-				<div id="atExpert" class="at" style="color: gray;">
-					<a class="mui-icon">@</a>
-				</div>
+
 			</div>
 			
 			<p style="margin-top: 10px;margin-left: 10px;font-size: 14px;width: 150px;">选择话题:
@@ -62,7 +60,7 @@
 					全部
 				</a>
 			</p>
-			<p style="margin-top: 10px;margin-left: 10px;font-size: 14px;">邀请的专家：<font id="selectedExpert" style="color: dodgerblue;"></font></p>
+			<p id="atExpert" style="margin-top: 10px;margin-left: 10px;font-size: 14px;">邀请专家：<font id="selectedExpert" style="color: dodgerblue;"></font><span class="mui-icon mui-icon-forward mui-pull-right"></span></p>
 			<div id="pictures" style="float: left;background-color: transparent;width: 320px;"></div>
 			<!--<div class="mui-input-row mui-checkbox mui-left" style="float: right;width: 100px;margin-top: -35px;margin-left: -100px;">
 				<label>匿名</label>
