增加历史记录下拉上拉的框架

--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -203,7 +203,7 @@
 						}
 					});
 					//跳到历史记录
-					events.openNewWindowWithData('keeprecord_history_main.html', {
+					events.openNewWindowWithData('keeprecord_history_0.html', {
 						data: passData, //群id
 						mem: memList //群成员
 					});
