作业已提交

--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -33,11 +33,11 @@
 					</div>
 					<div id="homework-info" class="homework-info"></div>
 				</div>
-				<div class="result-container">
+				<!--<div class="result-container">
 					<h6 class="comment-item">作业结果</h6>
 					<p id="result-text" class="result-text">
 					</p>
-				</div>
+				</div>-->
 				<!--评论区-->
 				<div class="comment-container">
 					<h6 class="comment-item">作业评语</h6>
