打开老师作业详情使用openwindow

--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -165,6 +165,14 @@
 
 			mui.plusReady(function() {
 				mui.previewImage();
+				resetData();
+				var data = plus.webview.currentWebview().data;
+				console.log('作业主界面传送的值：' + JSON.stringify(data));
+				homeworkModel = data;
+				//获取作业详情
+				requestHomeworkDetail();
+				//3.	获取作业对应学生列表
+				requestHomeworkStuList();
 				window.addEventListener('workCommented', function(e) {
 					requestHomeworkStuList();
 				})
