--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -41,7 +41,7 @@
 				<!--评论区-->
 				<div class="comment-container">
 					<h6 class="comment-item">作业评语</h6>
-					<textarea id="comment-area" class='comment-area' rows="5" placeholder="请输入评语"></textarea>
+					<textarea id="comment-area" class='comment-area' rows="5" placeholder="请输入评语，最多1000字"></textarea>
 					<button id="btn-comment" type="submit" class="mui-btn mui-btn-green btn-submit">提交评论</button>
 				</div>
 
